--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
   
   <button type="button" routerLink="/customers">Customers</button>
   <button type="button" routerLink="/orders">Orders</button>
-  <button type="button" routerLink="/crud/home">crud</button>
+  <button type="button" routerLink="/crud/home">Crud Home</button>
+  <button type="button" routerLink="/crud/details">Crud Details</button>
   <button type="button" routerLink="">Home</button>
   
   <router-outlet></router-outlet>
